--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
-# Local configuration file (sdk path, etc)
 local.properties
 
+build/
+/.idea/
+/.gradle/
+*.iml
+src/gen
+lib/Prelude.arc
+.bin
 # IntelliJ
 /out/
 
