--- a/.github/workflows/type-checking.yml
+++ b/.github/workflows/type-checking.yml
@@ -21,7 +21,7 @@ jobs:
         run: |
           wget https://github.com/JetBrains/Arend/releases/latest/download/arend.jar
           java -jar arend.jar
-          curl -O https://github.com/JetBrains/arend-lib/releases/latest/download/arend-lib.zip
+          wget https://github.com/JetBrains/arend-lib/releases/latest/download/arend-lib.zip
       - name: Type check code
         env:
             JAVA_OPTS: -Xms512m -Xmx1024m
