--- a/.github/workflows/type-checking.yml
+++ b/.github/workflows/type-checking.yml
@@ -27,4 +27,6 @@ jobs:
         env:
             JAVA_OPTS: -Xms512m -Xmx1024m
         run: |
-            java -jar arend.jar -L/. arend.yaml
+            build=$(java -jar arend.jar -L/. arend.yaml)
+            echo $build
+            case $build in *[ERROR]*) exit 1;; esac
