--- a/.github/workflows/type-checking.yml
+++ b/.github/workflows/type-checking.yml
@@ -33,4 +33,4 @@ jobs:
         run: |
             build=$(java -jar arend.jar -L/. arend.yaml)
             echo $build
-            case $build in *[ERROR]*) exit 1;; *) exit 0;; esac
+            case $build in *\[ERROR\]*) exit 1;; *) exit 0;; esac
